--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,57 @@
-name: Deployment (Container)
+name: Deployment (Docker - Secure)
+
 on:
   push:
-    branches:
-      - master
-      - dev
+    branches: [ main, dev ]
+
 env:
-  CACHE_KEY: node-deps
+  MONGODB_CONNECTION_PROTOCOL: mongodb+srv
   MONGODB_DB_NAME: env-demo
+  PORT: 8080
+
 jobs:
   test:
     environment: testing
     runs-on: ubuntu-latest
-    env:
-      MONGODB_CONNECTION_PROTOCOL: mongodb+srv
-      MONGODB_CLUSTER_ADDRESS: cluster0.ecindcr.mongodb.net
-      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
-      PORT: 8080
+
     steps:
-      - name: Get Code
+      - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/package-lock.json') }}
+          key: node-cache-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         run: npm ci
-      - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:$PORT # requires MongoDB Atlas to accept requests from anywhere!
-      - name: Run tests
-        run: npm test
-      - name: Output information
+
+      - name: Build Docker image
+        run: docker build -t gha-demo-secure .
+
+      - name: Run container securely
+        env:
+          MONGODB_CONNECTION_PROTOCOL: ${{ env.MONGODB_CONNECTION_PROTOCOL }}
+          MONGODB_CLUSTER_ADDRESS: ${{ secrets.MONGODB_CLUSTER_ADDRESS }}
+          MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+          MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
+          MONGODB_DB_NAME: ${{ env.MONGODB_DB_NAME }}
+          PORT: ${{ env.PORT }}
         run: |
-          echo "MONGODB_USERNAME: $MONGODB_USERNAME"
+          echo "Running container with secrets injected at runtime..."
+          docker run --rm \
+            -e MONGODB_CONNECTION_PROTOCOL \
+            -e MONGODB_CLUSTER_ADDRESS \
+            -e MONGODB_USERNAME \
+            -e MONGODB_PASSWORD \
+            -e MONGODB_DB_NAME \
+            -e PORT \
+            gha-demo-secure npm test
+
   deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Output information
-        env:
-          PORT: 3000
-        run: |
-          echo "MONGODB_DB_NAME: $MONGODB_DB_NAME"
-          echo "MONGODB_USERNAME: $MONGODB_USERNAME"
-          echo "${{ env.PORT }}"
+      - name: Simulated Deployment
+        run: echo "Deployment triggered after successful tests."
