--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deployment (Docker - Secure)
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ master, dev ]
 
 env:
   MONGODB_CONNECTION_PROTOCOL: mongodb+srv
