--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,5 +53,11 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Simulated Deployment
-        run: echo "Deployment triggered after successful tests."
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+      - name: Build and tag image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/gha-demo:${{ github.sha }} .
+
+      - name: Push image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/gha-demo:${{ github.sha }}
